# OmniLauncher-MC

./: .gitignore  CMakeLists.txt  Changelog.txt  LICENSE  LICENSE.txt  README.md  TERMS.txt  TREE.md  build.py  build.spec  cargo.toml  convert_assets.py  installer.iss  launcher.py  main.py  pyproject.toml  requirements.txt  settings.json  setup.py
.github/workflows/: build.yml  release.yml  tree.yml
docs/: index.html  script.js  style.css
installer/: setup.iss
scripts/: error_handler.py  generate_icons.py  launcher.py
src/: __init__.py  appdata.py  auth.cpp  auth.h  auth.py  config.cpp  config.h  downloader.py  http_client.cpp  http_client.h  json.h  launcher.cpp  launcher.h  launcher.py  main.cpp  main.py  profiles.py  resource.h  resource.rc  settings.py  ui.cpp  ui.h  updater.py  utils.py
src/omnilauncher/: __init__.py
src/omnilauncher/gui/: __init__.py  app.py
src/omnilauncher/services/: __init__.py  error_handler.py  launcher.py
tests/: __init__.py  test_auth.py  test_imports.py  test_profiles.py  test_settings.py  test_updater.py
